<resources>
    <string name="app_name">Family Map</string>

    <string name="loginServerHost">Server Host:</string>
    <string name="loginServerPort">Server Port:</string>
    <string name="loginUsername">User Name:</string>
    <string name="loginPassword">Password:</string>
    <string name="loginFirstName">First Name:</string>
    <string name="loginLastName">Last Name:</string>
    <string name="loginEmail">Email:</string>
    <string name="loginGender">Gender:</string>
    <string name="loginRadioMale">Male</string>
    <string name="loginRadioFemale">Female</string>
    <string name="loginSignInButton">SIGN IN</string>
    <string name="loginRegisterButton">REGISTER</string>

    <string name="fullName">%1$s %2$s</string>
    <string name="eventFormatted">%1$s: %2$s, %3$s (%4$d)</string>

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="lifeEventsTitle">LIFE EVENTS</string>
    <string name="familyTitle">FAMILY</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="settingsLifeStoryTopText">Life Story Lines</string>
    <string name="settingsLifeStoryBottomText">SHOW LIFE STORY LINES</string>
    <string name="settingsFamilyTreeTopText">Family Tree Lines</string>
    <string name="settingsFamilyTreeBottomText">SHOW FAMILY TREE LINES</string>
    <string name="settingsSpouseTopText">Spouse Lines</string>
    <string name="settingsSpouseBottomText">SHOW SPOUSE LINES</string>
    <string name="settingsFatherTopText">Father\'s Side</string>
    <string name="settingsFatherBottomText">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="settingsMotherTopText">Mother\'s Side</string>
    <string name="settingsMotherBottomText">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="settingsMaleTopText">Male Events</string>
    <string name="settingsMaleBottomText">FILTER EVENTS BASED ON GENDER</string>
    <string name="settingsFemaleTopText">Female Events</string>
    <string name="settingsFemaleBottomText">FILTER EVENTS BASED ON GENDER</string>
    <string name="settingsLogoutTopText">Logout</string>
    <string name="settingsLogoutBottomText">RETURN TO LOGIN SCREEN</string>

</resources>